--- a/lib/styles/theme.css
+++ b/lib/styles/theme.css
@@ -1,6 +1,14 @@
 @import 'tailwindcss';
 
 @theme static {
+  /*#region MARK: Custom Colors */
+  --color-chorange: oklch(67.952% 0.1852 44.193);
+  --color-chorange-hover: oklch(77.952% 0.1852 44.193);
+  /* --color-chorange-hover: oklch(67.952% 0.1852 44.193 / 0.7); */
+  /* --color-highlight: oklch(94.727% 0.13021 101.974 / 0.38); */
+  /* --color-highlight: oklch(88.2% 0.059 254.128 / 0.38); */
+  /*#endregion Custom Colors */
+
   /*#region MARK: Colors */
   --color-background: var(--background);
   --color-foreground: var(--foreground);
@@ -19,16 +27,21 @@
   --color-secondary: var(--color-zinc-700);
   --color-secondary-hover: var(--color-zinc-800);
 
+  --color-muted-strong: var(--color-zinc-500);
   --color-muted: var(--color-zinc-400);
   --color-faint: var(--color-zinc-200);
 
-  --color-accent: var(--color-zinc-800);
-  --color-accent-hover: var(--color-black);
-
-  --color-link: var(--color-secondary);
-  --color-link-hover: var(--color-primary-hover);
+  --color-accent: var(--color-chorange);
+  --color-accent-hover: var(--color-chorange-hover);
+  --color-accent-foreground: var(--color-background);
 
   --color-error: var(--color-red-500);
+  --color-destructive: var(--color-red-500);
+
+  --color-link: var(--color-chorange);
+  --color-link-hover: var(--color-primary-hover);
+
+  --color-input: transparent;
   /*#endregion Colors */
 }
 
@@ -50,13 +63,19 @@
   --color-muted: var(--color-zinc-600);
   --color-faint: var(--color-zinc-800);
 
-  --color-accent: var(--color-zinc-100);
-  --color-accent-hover: var(--color-zinc-200);
+  /* --color-accent: var(--color-zinc-100); */
+  /* --color-accent-hover: var(--color-zinc-200); */
+  --color-accent: var(--color-teal-600);
+  --color-accent-hover: var(--color-teal-500);
+  --color-accent-foreground: var(--color-body-primary);
 
   --color-error: var(--color-red-500);
+  --color-destructive: var(--color-red-500);
 
-  --color-link: var(--color-primary);
-  --color-link-hover: var(--color-primary-hover);
+  --color-link: var(--color-accent);
+  --color-link-hover: var(--color-accent-hover);
+  /* --color-link: var(--color-teal-600);
+  --color-link-hover: var(--color-teal-500); */
 }
 
 @theme static {
