refactor(header): update header layout and replace contact button with resume link
- added link to the resume in the header
- added favicon and manifest files for site branding and mobile support
- updated theme to use same accent color across light and dark themes

--- a/lib/styles/theme.css
+++ b/lib/styles/theme.css
@@ -65,8 +65,8 @@
 
   /* --color-accent: var(--color-zinc-100); */
   /* --color-accent-hover: var(--color-zinc-200); */
-  --color-accent: var(--color-teal-600);
-  --color-accent-hover: var(--color-teal-500);
+  --color-accent: var(--color-chorange);
+  --color-accent-hover: var(--color-chorange-hover);
   --color-accent-foreground: var(--color-body-primary);
 
   --color-error: var(--color-red-500);
