style: create prose stylesheet and make blog (MDX) link styles consistent with rest of app

--- a/app/globals.css
+++ b/app/globals.css
@@ -4,6 +4,7 @@
 @import '../lib/styles/theme.css' layer(base);
 
 @import 'tailwindcss/utilities.css' layer(utilities) source(none);
+@import '../lib/styles/prose.css' layer(utilities);
 
 @plugin '@tailwindcss/typography';
 @custom-variant dark (&:is(.dark *));
